<resources>
    <string name="app_name">AWSApp</string>
    <string name="study_buddy">Study Buddy</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="modify">Modify</string>
    <string name="log_out">Log out</string>
    <string name="confirm_your_e_mail_address">Confirm your e-mail address!</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="school">School</string>
    <string name="email_address">Email address</string>
    <string name="birth_date">Birth date</string>
    <string name="create_your_own_study_session">Create your own study session!</string>
    <string name="topic">Topic</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
</resources>