<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/titleMainScreen"
        android:layout_width="237dp"
        android:layout_height="52dp"
        android:text="@string/study_buddy"
        android:textSize="40sp"
        android:textColor="@color/font_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:paddingStart="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etUserName1"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/username"
        android:paddingStart="15dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMainScreen"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>