<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <EditText
            android:id="@+id/etChangedFName"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="52dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etChangedSName"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/second_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedFName"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etChangedUName"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedSName"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etChangedEmail"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email_address"
            android:background="@drawable/shape"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedUName"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etChangedPwd"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedEmail"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etChangedBirthDate"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/birth_date"
            android:inputType="text|date"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedPwd"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etChangedSchool"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/school"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedBirthDate"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etChangedSchool" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>