<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".fragments.AddStudySessionFragment">


    <Button
        android:id="@+id/btnCancelSessionAdd"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:text="@string/done"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvSessionTitle"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:text="@string/create_your_own_study_session"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTopic"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape"
        android:hint="@string/topic"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSessionTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTopic"
        tools:ignore="SpeakableTextPresentCheck" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="218dp"
        android:layout_height="156dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLocation"
        tools:ignore="SpeakableTextPresentCheck" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="150dp"
        android:layout_height="155dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/shape"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>